--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Header & Navigation -->
     <header id="navbar" class="bg-gradient-header fixed w-full z-50 top-0 left-0">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-white tracking-wider">JD</a>
+            <a href="#" class="text-2xl font-bold text-white tracking-wider">ASR</a>
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#about" class="text-gray-300 hover:text-pink-400 transition">About</a>
                 <a href="#projects" class="text-gray-300 hover:text-pink-400 transition">Projects</a>
@@ -125,16 +125,13 @@ An Aspiring Software Enthusiast                </p>
                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">About Me</h2>
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div data-aos="fade-right" class="md:w-1/3">
-                        <img src="https://placehold.co/400x400/1f2937/93c5fd?text=ASR" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
+                        <img src="https://imgur.com/a/ok-kycIdfr" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
                     </div>
                     <div data-aos="fade-left" class="md:w-2/3 text-lg text-gray-300">
                         <p class="mb-4">
 Hello, I'm Md Ashfaq Shahamat Rahi, a Computer Science and Engineering undergraduate with a strong foundation in programming and problem-solving. I am passionate about applying my academic knowledge to real-world challenges and contributing to collaborative projects to further develop my technical skills.                 
                         <p class="mb-4">
 I have experience with a variety of technical skills and tools, including VS Code, Git & GitHub, and the Microsoft Office Suite. I also have foundational skills in prompt engineering for generative AI models. A project I developed is a browser-based endless runner game called 
-
-
-
                         <p>
 Outside of my academic and technical pursuits, I am actively involved in my community. I've volunteered for a blood donation camp, where I coordinated registration and post-donation care for over 80 donors. I have also been a part of various community and cultural events, managing crowds and assisting with backstage logistics. Additionally, I participated in the                         </p>
                     </div>
@@ -149,7 +146,7 @@ Outside of my academic and technical pursuits, I am actively involved in my comm
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Project Card 1 -->
                     <div data-aos="fade-up" data-aos-delay="100" class="card rounded-lg overflow-hidden shadow-xl">
-                        <img src="https://placehold.co/600x400/4f46e5/ffffff?text=Project+One" alt="Project 1" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/600x400/4f46e5/ffffff?text=Rapid+Run" alt="Rapid Run" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2 text-white">RapidRun</h3>
                             <p class="text-gray-400 mb-4">RapidRun, which was created using HTML5 Canvas, CSS3, and JavaScript..</p>
@@ -158,32 +155,8 @@ Outside of my academic and technical pursuits, I am actively involved in my comm
                                 <a href="https://github.com/asrahi-7/RapidRun" class="text-pink-400 hover:underline">GitHub</a>
                             </div>
                         </div>
-                    </div>
-                    <!-- Project Card 2 -->
-                    <div data-aos="fade-up" data-aos-delay="200" class="card rounded-lg overflow-hidden shadow-xl">
-                        <img src="https://placehold.co/600x400/ec4899/ffffff?text=Project+Two" alt="Project 2" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-white">Task Management App</h3>
-                            <p class="text-gray-400 mb-4">A collaborative task management tool using Vue.js and Firebase. Features real-time updates and a drag-and-drop interface.</p>
-                            <div class="flex space-x-4">
-                                <a href="#" class="text-pink-400 hover:underline">Live Demo</a>
-                                <a href="#" class="text-pink-400 hover:underline">GitHub</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Project Card 3 -->
-                    <div data-aos="fade-up" data-aos-delay="300" class="card rounded-lg overflow-hidden shadow-xl">
-                        <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+Three" alt="Project 3" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-white">Data Visualization Dashboard</h3>
-                            <p class="text-gray-400 mb-4">An interactive dashboard for visualizing complex datasets using D3.js and Python (Flask) on the backend.</p>
-                            <div class="flex space-x-4">
-                                <a href="#" class="text-pink-400 hover:underline">Live Demo</a>
-                                <a href="#" class="text-pink-400 hover:underline">GitHub</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    </div>          
+               </div>
             </div>
         </section>
 
@@ -193,17 +166,16 @@ Outside of my academic and technical pursuits, I am actively involved in my comm
                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">Technical Skills</h2>
                 <div class="max-w-4xl mx-auto text-center">
                     <div data-aos="zoom-in" class="flex flex-wrap justify-center gap-4">
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">HTML5 & CSS3</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">JavaScript (ES6+)</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">React</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Vue.js</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Node.js</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Express</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Python</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">MongoDB</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">PostgreSQL</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Tailwind CSS</span>
-                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Figma</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">VS Code</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Git & GitHub</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Windows OS</span>
+                                                <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">MS Word</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Microsoft PowerPoint</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Microsoft Excel</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Algorithmic Thinking</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Logic Development</span>
+                        <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Foundational Prompt Engineering</span>
+                       
                         <span class="skill-badge text-lg font-medium px-4 py-2 rounded-full">Git & GitHub</span>
                     </div>
                 </div>
@@ -219,24 +191,24 @@ Outside of my academic and technical pursuits, I am actively involved in my comm
                     <div data-aos="fade-left" class="card p-6 rounded-lg flex items-center gap-6">
                         <div class="text-4xl text-pink-400"><i class="fas fa-award"></i></div>
                         <div>
-                            <h3 class="text-xl font-bold text-white">Certified Full-Stack Web Developer</h3>
-                            <p class="text-gray-400">Coursera - Issued Jan 2023</p>
+                            <h3 class="text-xl font-bold text-white"> Digital Literacy</h3>
+                            <p class="text-gray-400">Creative IT Institute - Issued Sep 2025</p>
                         </div>
                     </div>
                      <!-- Certification Item 2 -->
                      <div data-aos="fade-left" data-aos-delay="100" class="card p-6 rounded-lg flex items-center gap-6">
                         <div class="text-4xl text-indigo-400"><i class="fas fa-award"></i></div>
                         <div>
-                            <h3 class="text-xl font-bold text-white">AWS Certified Cloud Practitioner</h3>
-                            <p class="text-gray-400">Amazon Web Services - Issued Jun 2023</p>
+                            <h3 class="text-xl font-bold text-white">Certified AI+ Prompt Engineer Level 1</h3>
+                            <p class="text-gray-400"> AI CERTs - Issued Jul 2025</p>
                         </div>
                     </div>
                      <!-- Certification Item 3 -->
                      <div data-aos="fade-left" data-aos-delay="200" class="card p-6 rounded-lg flex items-center gap-6">
                         <div class="text-4xl text-emerald-400"><i class="fas fa-award"></i></div>
                         <div>
-                            <h3 class="text-xl font-bold text-white">Professional Scrum Master™ I (PSM I)</h3>
-                            <p class="text-gray-400">Scrum.org - Issued Nov 2023</p>
+                            <h3 class="text-xl font-bold text-white">Math Olympiad </h3>
+                            <p class="text-gray-400">DIU Mathematical Society(DIUMS)- Issued Jul 2025</p>
                         </div>
                     </div>
                 </div>
@@ -244,28 +216,56 @@ Outside of my academic and technical pursuits, I am actively involved in my comm
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="py-20 bg-gradient-section">
-            <div class="container mx-auto px-6 text-center">
-                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-4 section-title">Get In Touch</h2>
-                 <p data-aos="fade-up" data-aos-delay="100" class="max-w-2xl mx-auto text-gray-300 mb-10">
-                     I'm currently open to new opportunities and collaborations. Feel free to reach out!
-                 </p>
-                 <a data-aos="zoom-in" data-aos-delay="200" href="mailto:your.email@example.com" class="btn-primary text-white font-bold py-4 px-10 rounded-full text-xl inline-block">
-                     Say Hello
-                 </a>
-            </div>
-        </section>
+<section id="contact" class="py-20 bg-gradient-section">
+    <div class="container mx-auto px-6 text-center">
+         <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-4 section-title">Get In Touch</h2>
+         <p data-aos="fade-up" data-aos-delay="100" class="max-w-2xl mx-auto text-gray-300 mb-10">
+             I'm currently open to new opportunities and collaborations. Feel free to reach out!
+         </p>
+
+         <!-- Container for contact options -->
+         <div class="flex flex-col sm:flex-row justify-center items-center gap-8 mt-8">
+
+            <!-- Email Contact Option -->
+            <!-- TODO: Replace 'your.email@example.com' with your actual email address -->
+            <a data-aos="zoom-in" data-aos-delay="200" href="mailto:asfqrhi@gmail.com" class="flex items-center space-x-4 p-4 rounded-lg bg-gray-800 bg-opacity-50 hover:bg-opacity-75 transition-all duration-300 group">
+                <!-- Email Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-cyan-400" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                  <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                </svg>
+                <div>
+                    <span class="font-bold text-white group-hover:text-cyan-300 transition-colors">asfqrhi@gmail.com</span>
+                </div>
+            </a>
+
+            <!-- WhatsApp Contact Option -->
+            <!-- TODO: Replace '1234567890' with your actual phone number including country code -->
+            <a data-aos="zoom-in" data-aos-delay="300" href="https://wa.me/+8801771849580" target="_blank" rel="noopener noreferrer" class="flex items-center space-x-4 p-4 rounded-lg bg-gray-800 bg-opacity-50 hover:bg-opacity-75 transition-all duration-300 group">
+                <!-- WhatsApp Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-500" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.894 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.886-.001 2.267.651 4.383 1.905 6.195l-.476 1.748 1.78-.464z"/>
+                </svg>
+                <div>
+                     <span class="font-bold text-white group-hover:text-green-400 transition-colors">Message on WhatsApp</span>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+
+
     </main>
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-6">
         <div class="container mx-auto px-6 text-center">
             <div class="mb-4 flex justify-center space-x-6">
-                <a href="#" class="social-icon text-xl"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-icon text-xl"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="social-icon text-xl"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/asrahi-7" class="social-icon text-xl"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/asrahi07/" class="social-icon text-xl"><i class="fab fa-linkedin"></i></a>
+                <a href="https://facebook.com/asrahi07" class="social-icon text-xl"><i class="fab fa-facebook-f"></i></a>
             </div>
-            <p>&copy; 2024 John Doe. All Rights Reserved.</p>
+            <p>&copy; 2025 AS Rahi. All Rights Reserved.</p>
         </div>
     </footer>
 
