--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Md Ashfaq Shahamat Rahi -Portfolio</title>
+    <title> AS Rahi-Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -125,7 +125,7 @@ An Aspiring Software Enthusiast                </p>
                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">About Me</h2>
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div data-aos="fade-right" class="md:w-1/3">
-                        <img src="https://imgur.com/a/ok-kycIdfr" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
+                        <img src="https://i.postimg.cc/BZwX4tmR/1758664528339.jpg" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
                     </div>
                     <div data-aos="fade-left" class="md:w-2/3 text-lg text-gray-300">
                         <p class="mb-4">
