--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ An Aspiring Software Enthusiast                </p>
                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">About Me</h2>
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div data-aos="fade-right" class="md:w-1/3">
-                        <img src="https://i.postimg.cc/BZwX4tmR/1758664528339.jpg" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
+                        <img src="https://placehold.co/400x400/1f2937/93c5fd?text=ASR" alt="Ashfaq Shahamat Rahi" class="rounded-full shadow-lg mx-auto border-4 border-pink-500">
                     </div>
                     <div data-aos="fade-left" class="md:w-2/3 text-lg text-gray-300">
                         <p class="mb-4">
