--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="#" class="text-2xl font-bold text-white tracking-wider">ASR</a>
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#about" class="text-gray-300 hover:text-pink-400 transition">About</a>
-                <a href="#experience" class="text-gray-300 hover:text-pink-400 transition">Experience</a>
+                <a href="#Extracurricular" class="text-gray-300 hover:text-pink-400 transition">Extracurricular Activities</a>
                 <a href="#projects" class="text-gray-300 hover:text-pink-400 transition">Projects</a>
                 <a href="#skills" class="text-gray-300 hover:text-pink-400 transition">Skills</a>
                 <a href="#certs" class="text-gray-300 hover:text-pink-400 transition">Certifications</a>
@@ -88,7 +88,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
             <a href="#about" class="block py-2 text-gray-300 hover:text-pink-400">About</a>
-            <a href="#experience" class="block py-2 text-gray-300 hover:text-pink-400">Experience</a>
+            <a href="#Extracurricular" class="block py-2 text-gray-300 hover:text-pink-400">Extracurricular Activities</a>
             <a href="#projects" class="block py-2 text-gray-300 hover:text-pink-400">Projects</a>
             <a href="#skills" class="block py-2 text-gray-300 hover:text-pink-400">Skills</a>
             <a href="#certs" class="block py-2 text-gray-300 hover:text-pink-400">Certifications</a>
@@ -145,10 +145,10 @@
             </div>
         </section>
 
-        <!-- Experience Section -->
-        <section id="experience" class="py-20 overflow-hidden">
+        <!-- Extracurricular Activities Section -->
+        <section id="Extracurricular" class="py-20 overflow-hidden">
             <div class="container mx-auto px-6">
-                <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">My Experience</h2>
+                <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">My Extracurricular Activities</h2>
                 <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div data-aos="fade-up" data-aos-delay="100" class="card p-6 rounded-lg flex items-start gap-6">
                         <div class="text-3xl text-pink-400 pt-1"><i class="fas fa-tint"></i></div>
@@ -330,4 +330,3 @@
     </script>
 </body>
 </html>
-
