--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
                             </div>
                         </div>
                     </div>
+                    <div data-aos="fade-up" data-aos-delay="100" class="card rounded-lg overflow-hidden shadow-xl max-w-sm">
+                        <img src="https://placehold.co/600x400/4f46e5/ffffff?text=Block-Harmony" alt="Block-Harmony" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="font-bold text-xl mb-2 text-white">Block-Harmony</h3>
+                            <p class="text-gray-400 mb-4">A dynamic, browser-based endless runner game created using HTML5 Canvas, CSS3, and JavaScript.</p>
+                            <div class="flex space-x-4">
+                                <a href="https://asrahi-7.github.io/Block-Harmony/" target="_blank" class="text-pink-400 hover:underline">Live Demo</a>
+                                <a href="https://github.com/asrahi-7/Block-Harmony" target="_blank" class="text-pink-400 hover:underline">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
