--- a/index.html
+++ b/index.html
@@ -182,30 +182,44 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
-        <section id="projects" class="py-20 bg-gradient-section overflow-hidden">
+         <!-- Projects Section -->
+        <section id="projects" class="py-20 overflow-hidden">
             <div class="container mx-auto px-6">
                 <h2 data-aos="fade-up" class="text-4xl font-bold text-center mb-12 section-title">My Projects</h2>
-                <div class="flex justify-center">
-                    <div data-aos="fade-up" data-aos-delay="100" class="card rounded-lg overflow-hidden shadow-xl max-w-sm">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Project Card 1 -->
+                    <div data-aos="fade-up" data-aos-delay="100" class="card rounded-lg overflow-hidden shadow-xl">
                         <img src="https://placehold.co/600x400/4f46e5/ffffff?text=RapidRun" alt="RapidRun" class="w-full h-48 object-cover">
                         <div class="p-6">
-                            <h3 class="font-bold text-xl mb-2 text-white">RapidRun</h3>
+                            <h3 class="font-bold text-xl mb-2 text-white">Rapid Run</h3>
                             <p class="text-gray-400 mb-4">A dynamic, browser-based endless runner game created using HTML5 Canvas, CSS3, and JavaScript.</p>
                             <div class="flex space-x-4">
-                                <a href="https://asrahi-7.github.io/RapidRun/" target="_blank" class="text-pink-400 hover:underline">Live Demo</a>
-                                <a href="https://github.com/asrahi-7/RapidRun" target="_blank" class="text-pink-400 hover:underline">GitHub</a>
+                                <a href="https://asrahi-7.github.io/RapidRun/" class="text-pink-400 hover:underline">Live Demo</a>
+                                <a href="https://github.com/asrahi-7/RapidRun" class="text-pink-400 hover:underline">GitHub</a>
                             </div>
                         </div>
                     </div>
-                    <div data-aos="fade-up" data-aos-delay="200" class="card rounded-lg overflow-hidden shadow-xl max-w-sm">
-                        <img src="https://placehold.co/600x400/4f46e5/ffffff?text=Block-Harmony" alt="Block-Harmony" class="w-full h-48 object-cover">
+                    <!-- Project Card 2 -->
+                    <div data-aos="fade-up" data-aos-delay="200" class="card rounded-lg overflow-hidden shadow-xl">
+                        <img src="https://placehold.co/600x400/ec4899/ffffff?text=Block-Harmony" alt="Block-Harmony" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2 text-white">Block-Harmony</h3>
                             <p class="text-gray-400 mb-4">A dynamic, browser-based endless runner game created using HTML5 Canvas, CSS3, and JavaScript.</p>
                             <div class="flex space-x-4">
-                                <a href="https://asrahi-7.github.io/Block-Harmony/" target="_blank" class="text-pink-400 hover:underline">Live Demo</a>
-                                <a href="https://github.com/asrahi-7/Block-Harmony" target="_blank" class="text-pink-400 hover:underline">GitHub</a>
+                                <a href="https://asrahi-7.github.io/Block-Harmony/" class="text-pink-400 hover:underline">Live Demo</a>
+                                <a href="https://github.com/asrahi-7/Block-Harmony" class="text-pink-400 hover:underline">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Project Card 3 -->
+                    <div data-aos="fade-up" data-aos-delay="300" class="card rounded-lg overflow-hidden shadow-xl">
+                        <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+Three+Coming+Soon" alt="Project 3 Coming Soon" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="font-bold text-xl mb-2 text-white">Soon....</h3>
+                            <p class="text-gray-400 mb-4">3 2 1.....</p>
+                            <div class="flex space-x-4">
+                                <a href="#" class="text-pink-400 hover:underline">Live Demo</a>
+                                <a href="#" class="text-pink-400 hover:underline">GitHub</a>
                             </div>
                         </div>
                     </div>
